Refactor VectorStoreChatMemoryTest and streamline context setup
Simplify VectorStoreChatMemoryTest by using ApplicationContextRunner for context configuration and removing unused imports. Improve code clarity by refining setup and cleaning up unnecessary dependencies.